Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-Aug-2010 Andrew Eddie
 # Fixed issue [#21545] </optgroup> is not generated for menu items admin page (Franklin Tse, Omar Ramos).

 1-Aug-2010 Ron Severdia
^ [# 21368] Changed alignment of column items
^ Fixed CSS ordering for BlueStork (table styles out of place)
^ Separated out IE7 & IE8 CSS files (BlueStork)
 
 1-Aug-2010 Jean-Marie Simonet
 # [#21646] Text fields do not accept html tags
 $ [#21636] home menu error string. Thanks Bill.
 # [#21673] Patch committed  (17913) without placing the image in the right folder
 
31-Jul-2010 Ian MacLennan
 # [#21588] Reverting commit that broke unit tests.
 
 31-Jul-2010 Jean-Marie Simonet
 # [#21653] Mod_login redirections
 # [#21576] Missing code when mod_rewrite is off. Thanks Cherif
 $ Correcting mod_login string value.
 
30-Jul-2010 Louis Landry
 # [#21576] Language switcher don't affect document language - sef routing issue

30-Jul-2010 Jean-Marie Simonet
 # [#21588] Readonly calendar field pops up. Thanks Roland
 # [#20628] Titles of hidden fields are shown in module edit page, menu edit page, article edit page. Thanks Artyom.
 $ Correcting some inis. Deleted redundant one.
 
29-Jul-2010 Mark Dexter
 # Remove trashed category from sample data

29-Jul-2010 Ian MacLennan
 # [#21605] Change committed without appropriately modifying system tests.

29-Jul-2010 Jean-Marie Simonet
 # [#21619] Normalizing menu items sliders to be more explicit over the UI
 # [#21618] Modal CSS various issues, mostly related to bluestork loading media/system/css/adminlist.css. Thanks Matt & Angie.

28-Jul-2010 Ian MacLennan
 # [#21361] Contact Component (Category Contact List-No Query)
 # [#21553] "Add Site Name to Page Titles" does not work in Atom and RSS feeds